tests/fixtures/invalid/private_in_public.gcl
// Error: pub node references private dim in its signature (V003).
//
// `PrivateSpeed` is private, so its name is not visible across the
// include boundary. `pub node speed` names it → V003.
dim PrivateSpeed = Length / Time;
pub dim Speed = Length / Time;
const node velocity_of: PrivateSpeed = 10.0 m/s;
pub node speed: PrivateSpeed = @velocity_of;
